project3-deployment-ingress/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: rolling-svc
spec:
  selector:
    app: rolling
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
