project3-deployment-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolling-ing
spec:
  rules:
  - host: rollingdemo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rolling-svc
            port:
              number: 80
